Copyright 2017 Juliette Monsel <j_4321@protonmail.com>

Changelog
---------

- tkfilebrowser 2.2.0
    * Use babel instead of locale in order not to change the locale globally
    * Speed up (a little) folder content display
    * Improve example: add comparison with default dialogs
    * Add select all on Ctrl+A if multiple selection is enabled

- tkfilebrowser 2.1.1
    * Fix error if LOCAL_PATH does not exists or is not writtable

- tkfilebrowser 2.1.0
    * Add compatibility with tkinter.filedialog keywords 'master' and 'defaultextension'
    * Change look of filetype selector
    * Fix bugs when navigating without displaying hidden files
    * Fix color alternance bug when hiding hidden files
    * Fix setup.py
    * Hide suggestion drop-down when nothing matches anymore

- tkfilebrowser 2.0.0
    * Change package name to tkfilebrowser to respect PEP 8
    * Display error message when an issue occurs during folder creation
    * Cycle only through folders with key browsing in "opendir" mode
    * Complete only with folder names in "opendir" mode
    * Fix bug: grey/white color alternance not always respected
    * Add __main__.py with an example
    * Add "Recent files" shortcut
    * Make the text of the validate and cancel buttons customizable
    * Add possibility to disable new folder creation
    * Add python 2 support
    * Add horizontal scrollbar

- tkFileBrowser 1.1.2
    * Add tooltips to display the full path of the shortcut if the mouse stays
      long enough over it.
    * Fix bug: style of browser treeview applied to parent

- tkFileBrowser 1.1.1
    * Fix bug: key browsing did not work with capital letters
    * Add specific icons for symlinks
    * Add handling of symlinks, the real path is returned instead of the link path

- tkFileBrowser 1.1.0
    * Fix bug concerning the initialfile argument
    * Add column sorting (by name, size, modification date)

- tkFileBrowser 1.0.1