@@ -1,3 +1,0 @@
-TODO:
-- Better gestion of extensions (set default extension to selected ext in list)
-- Improve look of filetype selection -> Listbox in Toplevel? Combobox?
